# eunomia

./: .commit-msg-config.yaml  .eunomiarc  .gitignore  .gitlint  .pre-commit-config.yaml  .prettierignore  AUTHORS.md  MANIFEST.in  README.md  setup.cfg  setup.py
eunomia/: __init__.py  __main__.py
eunomia/abstract/: factory.py  formatter.py  linter.py  resource.py  tool.py
eunomia/cpp/: clang_format.py  clang_tidy.py
eunomia/factory/: dispatcher.py  formatter.py  linter.py
eunomia/model/: language.py  tool.py
eunomia/resources/: __init__.py  mustache.py  resource.py
eunomia/resources/cpp/: clang-format.mustache  clang-tidy.mustache
eunomia/tooling/: dispatcher.py  tool.py  type.py
eunomia/tooling/clang_format/: clang_format.py
eunomia/tooling/clang_format/template/: clang-format.mustache
eunomia/tooling/clang_tidy/: clang_tidy.py
eunomia/tooling/clang_tidy/template/: clang-tidy.mustache
eunomia/tooling/gitignore/: gitignore.py
eunomia/tooling/gitlint/: gitlint.py
eunomia/tooling/gitlint/template/: gitlint.mustache
resources/cpp/: .clang-format
tests/: conftest.py
