[metadata]
name = eunomia
description = Install the configuration files for different linters and formatter in an specific project
author = Mohammed Boujemaoui Boulaghmoudi
author_email = mohabouje@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/mohabouje/eunomia
project_urls =
    Documentation = https://github.com/mohabouje/eunomia
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = .
python_requires = >=3.8

install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = .
exclude =
    tests
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = eunomia.module:function
# For example:
# console_scripts =
#     fibonacci = eunomia.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
addopts =
    --cov eunomia --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py